feat: Use sys-locale for automatic language detection
- Replace AIW_ROLE_LANGUAGE environment variable with sys-locale library
- Automatically detect system locale to select role language
- English locales (en_*) use English role versions
- All other locales (zh-CN, zh_TW, ja, etc.) use Chinese versions
- Update help documentation to explain automatic language detection
- Simplify user experience - no manual environment variable configuration needed

Technical changes:
- Add sys-locale = "0.3" dependency to Cargo.toml
- Update get_preferred_language() to use sys_locale::get_locale()
- Remove AIW_ROLE_LANGUAGE environment variable support
- Update help text to document automatic language behavior

This provides a more seamless experience where users get the appropriate
language version based on their OS locale settings automatically.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -141,6 +141,9 @@ colored = "3.0.0"
 prettytable-rs = "0.10.0"
 notify = { version = "8.2.0", features = ["serde"] }
 
+# System locale detection
+sys-locale = "0.3"
+
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 psutil = "3.2"
