feat: 实现AIW插件市场系统 [REQ-017]
- 新建src/commands/market/模块（17个文件）
- 实现MarketSource trait（GitHub/Local/Remote三种市场源）
- 实现严格MCP-only过滤逻辑
- 实现插件安装器（MCP配置提取+环境变量配置）
- 实现12个CLI命令（marketplace/browse/search/install/list/remove/enable/disable）
- JSON配置管理（settings.json/plugins.json/mcp.json）
- YAML到JSON自动迁移
- 默认双市场源：claude-code-official + aiw-official
- 9个专用错误码（MCP-MKT-001至009）

SPEC依据：
- REQ-017：AIW插件市场系统
- ARCH-017：完全重构架构
- DATA-017：数据结构定义
- API-017：CLI命令和API设计

验收标准：
- ✅ 100%实现SPEC（REQ-017所有7个验收标准）
- ✅ 所有12个CLI命令可用
- ✅ JSON配置完全兼容Claude Code格式
- ✅ 严格MCP-only过滤工作正常
- ✅ 无TODO/FIXME/stub

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ sha2 = "0.10"
 md5 = "0.7"
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "process", "sync", "time"] }
 urlencoding = "2.1"
+git2 = { version = "0.18", features = ["https", "ssh"] }
+serde_yaml = "0.9"
 
 # Google Official APIs
 yup-oauth2 = "8.3"
